--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
   "maintainers": {
     "name": "Jeff Williams",
     "email": "jeffrey.l.williams@gmail.com"
+  },
+  "optionalDependencies": {
+    "highlight.js": "^9.5.0",
+    "pygmentize-bundled": "^2.3.0"
   }
 }
